# ferriskey

./: .pre-commit-config.yaml
api/src/application/http/: error.rs
core/: Cargo.toml
core/migrations/: 20251128072715_create_magic_links.down.sql  20251128072715_create_magic_links.up.sql  20251128072716_add_magic_link_settings_to_realm_settings.down.sql  20251128072716_add_magic_link_settings_to_realm_settings.up.sql  20260115150000_add_magic_link_token_id.down.sql  20260115150000_add_magic_link_token_id.up.sql
core/src/application/: mod.rs  services.rs
core/src/application/trident/: mod.rs
core/src/domain/authentication/: entities.rs  services.rs
core/src/domain/common/: mod.rs
core/src/domain/common/entities/: app_errors.rs
core/src/domain/crypto/: ports.rs
core/src/domain/realm/: entities.rs  ports.rs  services.rs
core/src/domain/trident/: ports.rs  services.rs
core/src/domain/trident/entities/: mod.rs
core/src/domain/user/: ports.rs
core/src/entity/: auth_sessions.rs  clients.rs  credentials.rs  jwt_keys.rs  magic_links.rs  mod.rs  prelude.rs  realm_settings.rs  realms.rs  redirect_uris.rs  refresh_tokens.rs  roles.rs  security_events.rs  user_required_actions.rs  user_role.rs  user_sessions.rs  users.rs  webhook_subscribers.rs  webhooks.rs
core/src/infrastructure/: repositories.rs
core/src/infrastructure/realm/mappers/: realm_setting_mapper.rs
core/src/infrastructure/realm/repositories/: realm_postgres_repository.rs
core/src/infrastructure/repositories/: argon2_hasher.rs  magic_link_repository.rs
core/src/infrastructure/user/: repository.rs
front/: README.md  openapi.yaml
front/src/api/: api.client.ts  trident.api.ts
(+13 files in other folders)
