[package]
name = "ferriskey-core"
description = "Core business logic library for FerrisKey"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
base32 = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
enum-display = "0.2.1"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
rand = "0.8.0"
rsa = { version = "0.9.9", features = ["pem"] }
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "macros",
    "with-uuid",
] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha1 = "0.10.6"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["attributes"] } # Attribute is for the instrument macro
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.23", features = ["json"] }
regex = "1.11.2"
futures = "0.3.31"
webauthn-rs = { version = "0.5.2", features = ["danger-credential-internals", "danger-allow-state-serialisation"] }

[dev-dependencies]
mockall = "0.13.1"
serde_plain = "1.0.2"
x509-parser = "0.18.0"
hex = "0.4.3"
p256 = { version = "0.13.2", features = ["ecdsa"] }
signature = "2.2.0"
sha2 = "0.10.9"
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }
